fix: horizontal scroll on load 3.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,11 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @layer base {
+  html,
+  body {
+    overflow-x: clip;
+  }
+
   :root {
     /* Light mode */
     --background: #fafbfe;
